2008-02-04  Marek Habersack  <mhabersack@novell.com>

	* SimpleWebHandlerParser.cs: use WebEncoding.FileEncoding when
	reading the source file.

2008-01-30 Igor Zelmanovich <igorz@mainsoft.com>

	* ObjectStateFormatter.cs: 
	ensure ReaderContext.GetCache called with positive arg to prevent from
	ArgumentOutOfRange being thrown.

2008-01-29 Igor Zelmanovich <igorz@mainsoft.com>

	* ObjectStateFormatter.cs: has public constructor.

2008-01-29  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* Page.cs: performance optimization of DeterminePostBackMode

2008-01-24  Marek Habersack  <mhabersack@novell.com>

	* PageThemeFileParser.cs: the DefaultBaseType property removed.

	* ApplicationFileParser.cs: added constructor which takes a
	TextReader.
	Removed the DefaultBaseType property.
	Added the Reader property.

	* MasterPage.cs: use BuildManager to create page instance.

	* WebHandlerParser.cs: added a compatibility constructor.

	* TemplateControl.cs: GetTypeFromControlPath uses
	BuildManager.GetCompiledType for the 2.0+ profile.

	* WebServiceParser.cs: added a compatibility internal
	constructor.

	* SimpleWebHandlerParser.cs: properly treat context and
	physicalPath parameters to the constructor, especially for the
	2.0+ profile where they are obsolete.
	Dependencies are added using virtual paths.

	* PageThemeParser.cs: DefaultBaseType property removed.

	* Page.cs: Style sheets and themes are compiled using
	BuildManager.
	Previous page instance is compiled using BuildManager for the 2.0+
	profile.

	* MasterPageParser.cs: Use BuildManager to create instance and
	compile types.
	Dependencies are added using virtual paths.

	* SimpleHandlerFactory.cs: Use
	BuildManager.CreateInstanceFromVirtualPath for the 2.0+ profile.

	* UserControlParser.cs: if the parser is created using a
	TextReader, take the input file path from the virtual path.
	Added a new internal constructor which takes both a TextReader and
	an inputFile parameters.