@@ -1,3 +1,7 @@
+2008-02-06  Vladimir Krasnov  <vladimirk@mainsoft.com>
+
+	* Control.cs: fixed ResolveClientUrlInternal for portal url prefixes
+
 2008-02-04  Marek Habersack  <mhabersack@novell.com>
 
 	* SimpleWebHandlerParser.cs: use WebEncoding.FileEncoding when
